--- a/docker-practice/dockercompose-springboot-mysql-nginx/app/src/main/resources/application.properties
+++ b/docker-practice/dockercompose-springboot-mysql-nginx/app/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 spring.application.name=docker-test
-#server.port=9998
+server.port=9527
 
-spring.datasource.url=jdbc:mysql://localhost:3306/test
+spring.datasource.url=jdbc:mysql://192.168.1.13:3307/test?useSSL=false
 
 spring.datasource.username=root
 
-spring.datasource.password=123456
+spring.datasource.password=root
 
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
